# six-percent

./: .dockerignore  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  LICENSE.md  Pipfile  README.md  SixPercent.spec  asnbfunds.py  config.ini  funds.json  lint.sh  main.py  pyproject.toml  requirements.txt  run.sh  setup.cfg  setup.sh  six-percent-tesseract.traineddata  six_percent.py  users.example.json  users.json.example
.github/: pull_request_template.md  renovate.json
.github/workflows/: build-exe.yml  build.yml  check.yml  lint-check.yml  lint.yml  python-app.yml  release.yml
docs/: CONTRIBUTING.md  DISCLAIMER.md  USAGE.md
lib/: constants.py  core.py  gui.py  locators.py  log.py  utils.py
scripts/: lint.sh  run.sh  setup.sh
src/: bot.py  core.py  encryption.py  gui.py  locators.py  settings.py
src/utils/: constants.py  locators.py  log.py
winexe/: SixPercent.spec
winexe/driver/: chromedriver
