[tool.poetry]
name = "six-percent"
version = "4.1"
description = "A bot that helps to automatically purchase ASNB Fixed Price UT units"
authors = ["Jerry Ng"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
selenium = "==4.1.3"
schedule = "1.1.0"
PySimpleGUI = "==4.59.0"
cryptography = "==36.0.2"

[tool.poetry.dev-dependencies]
autopep8 = "==1.6.0"
flake8 = "==4.0.1"
pyinstaller = "4.5.1"
mypy = "^0.910"
types-selenium = "==3.141.9"
pre-commit = "==2.18.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
