[tool.poetry]
authors = ["Jerry Ng"]
description = "A bot that helps to automatically purchase ASNB Fixed Price UT units"
license = "MIT"
name = "six-percent"
repository = "https://github.com/ngshiheng/six-percent"
version = "5.0.0"

[tool.poetry.dependencies]
PySimpleGUI = "==4.60.4"
colorlog = "==6.7.0"
cryptography = "==37.0.4"
python = "^3.8"
selenium = "==4.7.2"

[tool.poetry.dev-dependencies]
autopep8 = "==1.7.1"
flake8 = "==5.0.4"
mypy = "0.910"
pre-commit = "==2.20.0"
pyinstaller = "4.5.1"
types-selenium = "==3.141.9"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
